--- a/_posts/2023-11-06-first.md
+++ b/_posts/2023-11-06-first.md
@@ -1,8 +1,18 @@
 ---
 layout: single
-title: "블로그 개발지"
-categories: Dev
-tag: blog
+title: "[Dev] 블로그 개발지"
+excerpt: "본문의 주요 내용을 여기에 입력하세요"
+
+categories: # 카테고리 설정
+  - Game
+tags: # 포스트 태그
+  - [Dev, Blog]
+
+permalink: /game/first/ # 포스트 URL
+
+toc: true # 우측에 본문 목차 네비게이션 생성
+toc_sticky: true # 본문 목차 네비게이션 고정 여부
+
 ---
 
 **2023-11-06 개발**
