--- a/_posts/2023-11-06-first.md
+++ b/_posts/2023-11-06-first.md
@@ -8,7 +8,7 @@ categories: # 카테고리 설정
 tags: # 포스트 태그
   - [Dev, Blog]
 
-permalink: /game/first/ # 포스트 URL
+permalink: /Game/first # 포스트 URL
 
 toc: true # 우측에 본문 목차 네비게이션 생성
 toc_sticky: true # 본문 목차 네비게이션 고정 여부
