--- a/_posts/2024-03-16-GPDevLog.md
+++ b/_posts/2024-03-16-GPDevLog.md
@@ -4,7 +4,7 @@ title: "[DevLog] 곡괭이 키우기 개발노트"
 excerpt: "유니티 프로젝트 개발일지 작성 포스트"
 
 categories: # 카테고리 설정
-  - [Unity, DevLog]
+  - DevLog
 tags: # 포스트 태그
   - [Dev]
 
