--- a/_posts/2024-03-16-GPDevLog.md
+++ b/_posts/2024-03-16-GPDevLog.md
@@ -1,12 +1,12 @@
 ---
 layout: single
-title: "[DevLog] 곡괭이 키우기 개발노트"
-excerpt: "유니티 프로젝트 개발일지 작성 포스트"
+title: "[DevLog] 곡괭이 키우기 개발노트 #1"
+excerpt: "유니티 프로젝트 개발일지"
 
 categories: # 카테고리 설정
   - DevLog
 tags: # 포스트 태그
-  - [Dev]
+  - [Unity, Dev]
 
 permalink: unity/GPDevLog # 포스트 URL
 
