--- a/_pages/404.md
+++ b/_pages/404.md
@@ -6,8 +6,8 @@ permalink: /404.html
 ---
 
 
-<center>
-![](https://media.discordapp.net/attachments/1057217858905579563/1234823493363826758/404Error.png?ex=6632227e&is=6630d0fe&hm=3172f6563bfc192a68293d77ef1d4381b180030449f050da23e21336ae99d7a2&=&format=webp&quality=lossless&width=825&height=463)
-</center>
+<p align="center">
+  <img src="/assets/images/404Error.jpg">
+</p>
 
 Sorry, but the page you were trying to view does not exist.
