--- a/_posts/2024-03-16-GPDevLog.md
+++ b/_posts/2024-03-16-GPDevLog.md
@@ -20,11 +20,11 @@ toc_sticky: true # 본문 목차 네비게이션 고정 여부
 장기적인 프로젝트로 키우기 게임을 개발할건데, 키우기 게임같은 경우는 대부분 모바일이기에 모바일게임으로 만들어보겠다.<br/>
 처음으로 게임 타이틀을 지어 보았다.<br/>
 
-<p align="center">
+<!-- <p align="center">
   <img src="/assets/images/GameTitle.png">
 </p>
 
 <center>그렇다. 곡괭이 키우기다!</center>
-내가봐도 잘 지은 게임 타이틀이다.
+내가봐도 잘 지은 게임 타이틀이다. -->
 
 
